--- a/test/JayyTee.MassTransitSample.Worker.Tests/JayyTee.MassTransitSample.Worker.Tests.csproj
+++ b/test/JayyTee.MassTransitSample.Worker.Tests/JayyTee.MassTransitSample.Worker.Tests.csproj
@@ -12,11 +12,22 @@
         <PackageReference Include="FluentAssertions" Version="6.7.0" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.3" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\JayyTee.MassTransitSample.Worker\JayyTee.MassTransitSample.Worker.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="TestExecutionContext\*.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
