--- a/src/JayyTee.MassTransitSample.Shared/JayyTee.MassTransitSample.Shared.csproj
+++ b/src/JayyTee.MassTransitSample.Shared/JayyTee.MassTransitSample.Shared.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+      <PackageReference Include="Serilog" Version="2.11.0" />
       <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     </ItemGroup>
 
