Add an Example Scenario with external dependency

--- a/deploy/local/docker-compose.yml
+++ b/deploy/local/docker-compose.yml
@@ -7,3 +7,8 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - 1025:1025
+      - 8025:8025
