--- a/src/JayyTee.MassTransitSample.Worker/appsettings.LocalhostToPlaypen.json
+++ b/src/JayyTee.MassTransitSample.Worker/appsettings.LocalhostToPlaypen.json
@@ -1,4 +1,8 @@
 {
+    "Email": {
+        "Host": "localhost",
+        "Port": 1025
+    },
     "RabbitMq": {
         "HostUri": "amqp://localhost:5672/",
         "Username": "guest",
