--- a/src/JayyTee.MassTransitSample.Shared/JayyTee.MassTransitSample.Shared.csproj
+++ b/src/JayyTee.MassTransitSample.Shared/JayyTee.MassTransitSample.Shared.csproj
@@ -18,4 +18,8 @@
       <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\JayyTee.MassTransitSample.Application\JayyTee.MassTransitSample.Application.csproj" />
+    </ItemGroup>
+
 </Project>
